--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,14 @@ body {
   background-color: var(--hero-backgraund-color);
   padding-top: 200px;
   padding-bottom: 200px;
+
+  background-image: -webkit-linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/hero-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .hero > .container {
   text-align: center;
