--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ body {
   background-color: var(--hero-backgraund-color);
   padding-top: 200px;
   padding-bottom: 200px;
-
+max-width: 1600px;
   background-image: -webkit-linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
