--- a/css/styles.css
+++ b/css/styles.css
@@ -284,13 +284,15 @@ body {
   height: 44px;
   border-radius: 50%;
 }
-.socials-link:hover {
+.socials-link:hover,
+.socials-link:focus {
   background-color: var(--site-accent-color);
 }
 .team .socials-icon {
   fill: var(--icon-fill-color);
 }
-.socials-link:hover .socials-icon {
+.socials-link:hover .socials-icon,
+.socials-link:focus .socials-icon {
   fill: var(--logo-color-white);
 }
 /* clients */
@@ -324,10 +326,12 @@ body {
 .client-icon {
   fill:var(--icon-fill-color);
 }
-.clients-list .link:hover .client-icon {
+.clients-list .link:hover .client-icon,
+.clients-list .link:focus .client-icon {
 fill: var(--site-accent-color);
 }
-.clients-list .link:hover .thumb {
+.clients-list .link:hover .thumb,
+.clients-list .link:focus .thumb {
 border-color: var(--site-accent-color);
 }
 /* portfolio */
@@ -372,7 +376,11 @@ border-color: var(--site-accent-color);
   flex-basis: calc((100% - 2 * 30px) / 3);
   overflow: hidden;
 }
-.works-item > div {
+.works-item:hover,
+.works-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.works-item .link> div {
   padding: 20px 24px;
   border-right: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
@@ -388,6 +396,7 @@ border-color: var(--site-accent-color);
   margin-bottom: 4px;
 }
 .works-text {
+  color: var(--font-color);
   font-weight: 400;
   font-size: 16px;
   line-height: 1.88;
@@ -398,6 +407,12 @@ border-color: var(--site-accent-color);
   background-color: var(--hero-backgraund-color);
   padding-top: 60px;
   padding-bottom: 60px;
+}
+.footer .container {
+  display: flex;
+}
+.footer .container>div:first-child {
+  width: 231px;
 }
 .footer address {
   margin-top: 28px;
@@ -424,4 +439,33 @@ border-color: var(--site-accent-color);
   font-size: 14px;
   line-height: 1.71;
   text-decoration-line: none;
+}
+.footer-socials {
+  padding-top: 12px;
+  padding-left: 70px;
+}
+.footer-socials p {
+font-weight: 700;
+font-size: 14px;
+line-height: calc(16/14);
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: var(--hero-title-color);
+margin-top: 0;
+
+}
+.footer-socials ul {
+  display: flex;
+  gap: 10px;
+
+}
+.footer-socials .socials-link {
+  background: rgba(255, 255, 255, 0.1);
+}
+.footer-socials .socials-icon {
+  fill: var(--hero-title-color);
+}
+.footer-socials .socials-link:hover,
+.footer-socials .socials-link:focus {
+  background-color: var(--site-accent-color);
 }
